test/invalid-semantics/fc66494_recursive_declaration/recursive_declaration.mag
-- Author: 66494, Tiago Silva

const x : Bool = true || x

fun main (_) : Unit -> Unit =
    print(x)